--- a/templates/layouts/content.html
+++ b/templates/layouts/content.html
@@ -13,6 +13,6 @@
         {% when "/contact" %}
             {% include "pages/contact.html" %}
         {% else %}
-            {% include "pages/another-page.html" %}
+            {% include "pages/404.html" %}
     {% endmatch %}
 </div>
