--- a/templates/components/features.html
+++ b/templates/components/features.html
@@ -13,7 +13,7 @@
           >
             A better workflow
           </p>
-          <p class="mt-6 text-lg leading-8 text-gray-600">
+          <p class="mt-6 text-base leading-8 text-gray-600">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores
             impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis
             ratione.
