--- a/templates/components/hero.html
+++ b/templates/components/hero.html
@@ -4,7 +4,7 @@
       <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
         Boost your productivity.<br />Start using our app today.
       </h2>
-      <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-gray-600">
+      <p class="mx-auto mt-6 max-w-xl text-base leading-8 text-gray-600">
         Incididunt sint fugiat pariatur cupidatat consectetur sit cillum anim id
         veniam aliqua proident excepteur commodo do ea.
       </p>
