--- a/templates/layouts/content.html
+++ b/templates/layouts/content.html
@@ -1,18 +1,8 @@
 <div id="content" class="mt-6">
-    {% match path %}
-        {% when "/" %}
-            {% include "pages/home.html" %}
-        {% when "/mobile-app" %}
-            {% include "pages/mobile-app.html" %}
-        {% when "/video-series" %}
-            {% include "pages/video-series.html" %}
-        {% when "/services" %}
-            {% include "pages/services.html" %}
-        {% when "/company" %}
-            {% include "pages/company.html" %}
-        {% when "/coming-soon" %}
-            {% include "pages/coming-soon.html" %}
-        {% else %}
-            {% include "pages/404.html" %}
-    {% endmatch %}
+  {% match path %} {% when "/" %} {% include "pages/home.html" %} {% when
+  "/mobile-app" %} {% include "pages/mobile-app.html" %} {% when "/video-series"
+  %} {% include "pages/video-series.html" %} {% when "/services" %} {% include
+  "pages/services.html" %} {% when "/company" %} {% include "pages/company.html"
+  %} {% when "/coming-soon" %} {% include "pages/coming-soon.html" %} {% else %}
+  {% include "pages/404.html" %} {% endmatch %}
 </div>
