--- a/templates/pages/video-series.html
+++ b/templates/pages/video-series.html
@@ -1,7 +1,7 @@
 {% import "macros/video.html" as video %}
 
 <div class="container mx-auto px-4 max-w-4xl">
-  <h1 class="text-xl font-bold mb-6">Recent Videos</h1>
+  <h1 class="text-lg font-bold mb-6">Recent Videos</h1>
 
   <div class="space-y-6">
     {% call video::video_entry( "Open Knowledge Graph", "January 7, 2025", "We
