--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 
 <div class="grid grid-cols-3 lg:grid-cols-6 gap-4 mb-6">
   {% call nav::nav_button("/", "Home", path) %} {% call
-  nav::nav_button("/mobile-app", "Mobile App", path) %} {% call
+  nav::nav_button("/onyx", "Mobile App", path) %} {% call
   nav::nav_button("/video-series", "Video Series", path) %} {% call
   nav::nav_button("/services", "Services", path) %} {% call
   nav::nav_button("/company", "Company", path) %} {% call
