--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -22,7 +22,7 @@
     <div>
       <h2 class="text-lg font-bold mb-4">Our Principles</h2>
       <ul class="list-disc ml-6 space-y-2 text-sm">
-        <li>Open Agents</li>
+        <li>Open Source</li>
         <li>Build in Public</li>
         <li>Bitcoin Only</li>
         <li>One Market</li>
