--- a/templates/layouts/content.html
+++ b/templates/layouts/content.html
@@ -1,7 +1,7 @@
 <div id="content" class="mt-6">
   {% match path %} {% when "/" %} {% include "pages/home.html" %} {% when
-  "/onyx" %} {% include "pages/onyx.html" %} {% when "/video-series"
-  %} {% include "pages/video-series.html" %} {% when "/services" %} {% include
+  "/onyx" %} {% include "pages/onyx.html" %} {% when "/video-series" %} {%
+  include "pages/video-series.html" %} {% when "/services" %} {% include
   "pages/services.html" %} {% when "/company" %} {% include "pages/company.html"
   %} {% when "/coming-soon" %} {% include "pages/coming-soon.html" %} {% else %}
   {% include "pages/404.html" %} {% endmatch %}
