--- a/templates/macros/video.html
+++ b/templates/macros/video.html
@@ -1,9 +1,11 @@
 <div class="mb-8">
   <p class="text-sm mb-4">
-    View our complete list of 150+ videos in the 
-    <a href="https://github.com/OpenAgentsInc/openagents/wiki/Video-Series" 
-       target="_blank"
-       class="text-white/50 hover:text-white/80 underline">
+    View our complete list of 150+ videos in the
+    <a
+      href="https://github.com/OpenAgentsInc/openagents/wiki/Video-Series"
+      target="_blank"
+      class="text-white/50 hover:text-white/80 underline"
+    >
       Video Series Wiki
     </a>
   </p>
