--- a/templates/pages/video-series.html
+++ b/templates/pages/video-series.html
@@ -2,15 +2,22 @@
 
 <div class="container mx-auto px-4 max-w-4xl">
   <h1 class="text-lg font-bold mb-6">Recent Videos</h1>
-  
+
   <p class="text-sm mb-6">
-    We've documented a year of development in 150+ videos on X.
-    Check out <a href="https://twitter.com/OpenAgentsInc/status/1721942435125715086" 
-       target="_blank"
-       class="text-white/50 hover:text-white/80 underline">episode one</a> or see the 
-    <a href="https://github.com/OpenAgentsInc/openagents/wiki/Video-Series" 
-       target="_blank"
-       class="text-white/50 hover:text-white/80 underline">full episode list</a>.
+    We've documented a year of development in 150+ videos on X. Check out
+    <a
+      href="https://twitter.com/OpenAgentsInc/status/1721942435125715086"
+      target="_blank"
+      class="text-white/50 hover:text-white/80 underline"
+      >episode one</a
+    >
+    or see the
+    <a
+      href="https://github.com/OpenAgentsInc/openagents/wiki/Video-Series"
+      target="_blank"
+      class="text-white/50 hover:text-white/80 underline"
+      >full episode list</a
+    >.
   </p>
 
   <div class="space-y-6">
