--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -80,7 +80,6 @@
     <h2 class="text-lg font-bold mb-6">Latest Updates</h2>
 
     {% call blog::blog_post( "January 14, 2025", "New Website", "We have a new
-    website! It's inspired by the US Graphics Company, from which we also have a
-    new font: Berkeley Mono." ) %}
+    website! It uses Rust, HTMX, and a new font Berkeley Mono from the US Graphics Company, from which we also drew inspiration on design." ) %}
   </div>
 </div>
