--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -19,7 +19,9 @@
           agents.
         </p>
         <p class="text-sm">
-          <a href="/onyx" class="text-white/80 hover:text-white underline">Download Onyx in beta for Android & iOS now.</a>
+          <a href="/onyx" class="text-white/80 hover:text-white underline"
+            >Download Onyx in beta for Android & iOS now.</a
+          >
         </p>
       </div>
     </div>
@@ -83,6 +85,7 @@
     <h2 class="text-lg font-bold mb-6">Latest Updates</h2>
 
     {% call blog::blog_post( "January 14, 2025", "New Website", "We have a new
-    website! It uses Rust, HTMX, and a new font Berkeley Mono from the US Graphics Company, from which we also drew inspiration on design." ) %}
+    website! It uses Rust, HTMX, and a new font Berkeley Mono from the US
+    Graphics Company, from which we also drew inspiration on design." ) %}
   </div>
 </div>
