--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -84,7 +84,7 @@
   <div class="border border-white p-6">
     <h2 class="text-lg font-bold mb-6">Latest Updates</h2>
 
-    {% call blog::blog_post( "January 16, 2025", "Repo Map Tool", "We've released a small tool for generating a concise map of a GitHub repo, optimized for LLM chats & agents, using the Aider repo map. <a href='/repomap' class='text-white/80 hover:text-white underline'>Try it here</a>." ) %}
+    {% call blog::blog_post( "January 16, 2025", "Repo Map Tool", "We've released a small tool for generating a concise map of a GitHub repo, optimized for LLM chats & agents, using the Aider repo map." ) %}
 
     {% call blog::blog_post( "January 14, 2025", "New Website", "We have a new website! It uses Rust, HTMX, and a new font Berkeley Mono from the US Graphics Company, from which we also drew inspiration on design." ) %}
   </div>
