--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <link href="/assets/main.css" rel="stylesheet" />
     <link href="/assets/fonts.css" rel="stylesheet" />
     <title>OpenAgents - {{title}}</title>
@@ -33,7 +36,9 @@
       document.addEventListener("htmx:afterSettle", updateActiveDot);
     </script>
   </head>
-  <body class="min-h-screen w-screen bg-black text-white font-mono overflow-x-hidden">
+  <body
+    class="min-h-screen w-screen bg-black text-white font-mono overflow-x-hidden"
+  >
     <div class="flex justify-center mx-2 md:mx-6">
       <div class="w-[60rem] max-w-full my-6 px-4 py-6 border border-white">
         {% include "header.html" %} {% include "layouts/content.html" %}
